# InterIIT_Techmeet_11.0

./: .gitignore  README.md  requirements.txt
pluto_control/: README.md  drone1.py  drone2.py  env.py  setup.py  single.py  swarm.py
pluto_control/plutolib/: controller.py  kalman.py  logger.py  protocol.py  utils.py
pose_ocam/: CMakeLists.txt  README.md  server.py  server2.py
pose_ocam/include/: CppPythonSocketConfig.h  utils.hpp  withrobot_camera.hpp
pose_ocam/src/: main.cpp  main_singlethread.cpp
visualizer/: plot_controller.py  plot_pose.py
